log
Sun 20 Aug 2023 03:03:38 AM UTC: 
 tests:  0|6
total_score: 0/70
09c79d6
Thu 24 Aug 2023 01:23:47 AM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:36:3: error: expected identifier before ‘return’
   36 |   return NULL;
      |   ^~~~~~
list.c:37:1: error: control reaches end of non-void function [-Werror=return-type]
   37 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
a2b4646
Thu 24 Aug 2023 01:27:02 AM UTC: 
 list.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  1|5
total_score: 10/70
5d23253
Thu 24 Aug 2023 01:32:37 AM UTC: 
 list.c | 8 ++++++++
 1 file changed, 8 insertions(+)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:49:1: error: control reaches end of non-void function [-Werror=return-type]
   49 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
a48811b
Thu 24 Aug 2023 01:32:55 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:49:1: error: control reaches end of non-void function [-Werror=return-type]
   49 | };
      | ^
cc1: all warnings being treated as errors
Compilation failed
3983566
Thu 24 Aug 2023 01:33:09 AM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:48:1: error: control reaches end of non-void function [-Werror=return-type]
   48 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
b91234d
Thu 24 Aug 2023 01:33:38 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
test.c: In function ‘firstList’:
test.c:448:5: error: ‘main’ is normally a non-static function [-Werror=main]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:468:1: error: expected declaration or statement at end of input
  468 | }
      | ^
test.c:469: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:448:5: error: ‘main’ defined but not used [-Werror=unused-function]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
list.c:87:6: error: ‘cleanList’ defined but not used [-Werror=unused-function]
   87 | void cleanList(List * list) {
      |      ^~~~~~~~~
list.c:78:8: error: ‘popBack’ defined but not used [-Werror=unused-function]
   78 | void * popBack(List * list) {
      |        ^~~~~~~
list.c:65:6: error: ‘pushBack’ defined but not used [-Werror=unused-function]
   65 | void pushBack(List * list, void * data) {
      |      ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
a740562
Thu 24 Aug 2023 01:33:51 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:48:1: error: control reaches end of non-void function [-Werror=return-type]
   48 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
d1814b0
Thu 24 Aug 2023 01:35:43 AM UTC: 
 list.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  2|5
total_score: 15/70
2d61c35
Thu 24 Aug 2023 01:38:01 AM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:49:42: error: ‘List’ {aka ‘struct List’} has no member named ‘next’
   49 |     if(list->current->next !=NULL && list->next !=NULL){
      |                                          ^~
Compilation failed
944eb42
Thu 24 Aug 2023 01:38:45 AM UTC: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|0
52d1219
Thu 24 Aug 2023 01:41:30 AM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|0
28ebef4
Thu 24 Aug 2023 01:42:33 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c6209b7
Thu 24 Aug 2023 01:44:27 AM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|0
8c3beab
Thu 24 Aug 2023 02:16:50 AM UTC: 
 list.c | 14 ++++++++++----
 1 file changed, 10 insertions(+), 4 deletions(-)
 tests:  0|0
3294e18
Thu 24 Aug 2023 02:27:12 AM UTC: 
 list.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  0|0
18144a9
Thu 24 Aug 2023 02:30:28 AM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
c1a399b
Thu 24 Aug 2023 02:30:53 AM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
a082323
Thu 24 Aug 2023 02:49:35 AM UTC: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  0|0
a4175e5
Thu 24 Aug 2023 02:50:57 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
4f58dc1
Thu 24 Aug 2023 02:51:20 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
5f720f2
Thu 24 Aug 2023 02:52:20 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
8289085
Thu 24 Aug 2023 02:53:09 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
50c527b
Thu 24 Aug 2023 02:54:10 AM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
f465373
Thu 24 Aug 2023 02:54:27 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
ca69789
